--- a/CSS/layout/_footer.sass
+++ b/CSS/layout/_footer.sass
@@ -1,2 +1,45 @@
-footer
-backgorund-color:#aaa
+.custom-container-footer
+  background-image: url(../images/cover2.jpg)
+  height: 400px
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center center
+  margin-top: 100px
+  h4
+    @include color($white)
+  .footer-left
+    margin: 40px 0px
+    p
+      font-size: 15px
+      @include color(#777777)
+    .footer-logo
+      list-style: none
+    .footer-social-media
+      list-style: none
+      display: flex
+      gap: 10px
+      a
+        font-size: 30px
+        color: $warning
+  .footer-mid
+    margin: 40px 0px
+    p
+      font-size: 15px
+      @include color($white)
+    .footer-logo
+      list-style: none
+    .footer-social-media
+      list-style: none
+      display: flex
+      gap: 10px
+  .footer-right
+    margin: 40px 0px
+    p
+      font-size: 15px
+      @include color($white)
+    .footer-logo
+      list-style: none
+    .footer-social-media
+      list-style: none
+      display: flex
+      gap: 10px
