--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,12 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+body li {
+  list-style: none;
+}
+body a {
+  text-decoration: none;
+}
 
 button, .btn-warning, .btn-success, .btn-error {
   outline: none;
@@ -40,6 +46,71 @@ button, .btn-warning, .btn-success, .btn-error {
   color: white;
 }
 
+.custom-container-footer {
+  background-image: url(../images/cover2.jpg);
+  height: 400px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin-top: 100px;
+}
+.custom-container-footer h4 {
+  color: white;
+}
+.custom-container-footer .footer-left {
+  margin: 40px 0px;
+}
+.custom-container-footer .footer-left p {
+  font-size: 15px;
+  color: #777777;
+}
+.custom-container-footer .footer-left .footer-logo {
+  list-style: none;
+}
+.custom-container-footer .footer-left .footer-social-media {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+}
+.custom-container-footer .footer-left .footer-social-media a {
+  font-size: 30px;
+  color: #f58d17;
+}
+.custom-container-footer .footer-mid {
+  margin: 40px 0px;
+}
+.custom-container-footer .footer-mid p {
+  font-size: 15px;
+  color: white;
+}
+.custom-container-footer .footer-mid .footer-logo {
+  list-style: none;
+}
+.custom-container-footer .footer-mid .footer-social-media {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+}
+.custom-container-footer .footer-right {
+  margin: 40px 0px;
+}
+.custom-container-footer .footer-right p {
+  font-size: 15px;
+  color: white;
+}
+.custom-container-footer .footer-right .footer-logo {
+  list-style: none;
+}
+.custom-container-footer .footer-right .footer-social-media {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+}
+
+.rotate {
+  transform: perspective(800px) rotateY(25deg) !important;
+}
+
 .slider-1 {
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/cover1.jpg);
 }
@@ -56,18 +127,8 @@ button, .btn-warning, .btn-success, .btn-error {
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/cover2.jpg);
 }
 
-footer {
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/cover2.jpg);
-}
-
 #client {
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/cover3.jpg);
-}
-
-.bg-cover {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 .carousel-control-next,
@@ -79,18 +140,16 @@ footer {
   margin: auto;
 }
 
-.custom-container-carousel {
-  height: 400px;
-}
-
-.about-btn button, .about-btn .btn-error, .about-btn .btn-success, .about-btn .btn-warning {
+.custom-container-carousel .about-btn button, .custom-container-carousel .about-btn .btn-error, .custom-container-carousel .about-btn .btn-success, .custom-container-carousel .about-btn .btn-warning {
   padding: 14px 38px;
   color: white;
 }
 
 .about-img img {
   max-width: 100%;
-  height: auto;
+  height: 480px;
+  transition: 4s;
+  transform: perspective(800px) rotateY(0deg);
 }
 
 .about-items .divider {
@@ -147,10 +206,9 @@ footer {
   margin: 5px;
 }
 .custom-container-menu .card a {
-  margin: 0px 10px;
   text-decoration: none;
   color: black;
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 500;
   cursor: pointer;
 }
@@ -167,4 +225,46 @@ footer {
   height: auto;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
+}
+
+.custom-container-team {
+  text-align: center;
+}
+.custom-container-team h1 {
+  font-weight: bolder;
+  font-size: 40px;
+}
+.custom-container-team p {
+  font-size: 15px;
+  margin: 10px;
+  color: #777777;
+}
+.custom-container-team .card {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s linear;
+}
+.custom-container-team .card:hover {
+  transform: perspective(800px) translateZ(20px);
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+}
+.custom-container-team .card h5 {
+  color: black;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+}
+.custom-container-team .card p {
+  font-size: 15px;
+  margin: 7px;
+  color: #777777;
+}
+.custom-container-team .card img {
+  width: 170px;
+  height: auto;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  margin: 10px;
 }/*# sourceMappingURL=main.css.map */
