--- a/CSS/pages/_home.sass
+++ b/CSS/pages/_home.sass
@@ -1,16 +1,9 @@
-// .rotate 
-//   transform: perspective(800px) rotateY(25deg) !important
+.rotate 
+  transform: perspective(800px) rotateY(25deg) !important
 
-// .right_side 
-//   display: flex
-//   flex-direction: column
-//   align-items: center
-//   width: 510px
-//   height: 510px
-//   transition: 4s
-//   transform: perspective(800px) rotateY(0deg)
-//   background-color: $black
-//   border-radius: 18px
+
+
+
 
 .slider-1
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, .1)), url(../images/cover1.jpg)
@@ -24,16 +17,11 @@
 #features
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, .1)), url(../images/cover2.jpg)
 
-footer
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, .1)), url(../images/cover2.jpg)
+
 
 #client
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, .1)), url(../images/cover3.jpg)
 
-.bg-cover
-  background-size: cover
-  background-position: center
-  background-repeat: no-repeat
 
 .carousel-control-next,
 .carousel-control-prev
@@ -45,14 +33,15 @@ footer
 
 
 .custom-container-carousel
-  height: 400px
-.about-btn
-  button
+  .about-btn
+   button
     @include button(14px,38px,$white)
 .about-img
   img
     max-width: 100%
-    height: auto
+    height: 480px
+    transition: 4s
+    transform: perspective(800px) rotateY(0deg)
 
 .about-items
   .divider
@@ -90,12 +79,11 @@ footer
       transform: perspective(800px) translateZ(20px)
       box-shadow: 0 10px 40px rgba(0, 0, 0, .1)  
     .stars
-      margin:5px 
+     margin: 5px
     a
-      margin: 0px 10px
       text-decoration: none
       color: $dark
-      font-size: 20px
+      font-size: 22px
       font-weight: 500
       cursor: pointer  
     &:hover
@@ -109,4 +97,36 @@ footer
       height: auto
       border-top-right-radius:5px 
       border-top-left-radius: 5px
-    
+.custom-container-team
+  text-align: center
+  h1
+     font-weight: bolder
+     font-size: 40px
+  p
+    font-size: 15px  
+    margin: 10px
+    @include color(#777777)    
+  .card
+    padding: 0
+    display:  flex
+    justify-content: center
+    align-items: center
+    transition: all .3s linear
+    &:hover 
+      transform: perspective(800px) translateZ(20px)
+      box-shadow: 0 10px 40px rgba(0, 0, 0, .1)  
+    h5
+      color: $dark
+      font-size: 20px
+      font-weight: 500
+      cursor: pointer       
+    p
+      font-size: 15px
+      margin: 7px
+      @include color(#777777)
+    img
+      width: 170px
+      height: auto
+      border-top-right-radius:5px 
+      border-top-left-radius: 5px
+      margin: 10px
